# corba

./: .gitignore  .gitmodules  README.md  ambiata-project.cabal  boris.toml  master.toml
corba-cli/: corba-cli.cabal  corba-cli.lock-8.0.1
corba-cli/main/: corba.hs
corba-codegen-aeson/: corba-codegen-aeson.cabal  corba-codegen-aeson.lock-7.10.2  corba-codegen-aeson.lock-8.0.1
corba-codegen-aeson/src/Corba/Codegen/: Aeson.hs
corba-codegen-client/: corba-codegen-client.cabal
corba-codegen-client/src/Corba/Codegen/: Client.hs
corba-codegen-client/src/Corba/Codegen/Client/: Json.hs
corba-codegen-data/: corba-codegen-data.cabal  corba-codegen-data.lock-7.10.2  corba-codegen-data.lock-8.0.1
corba-codegen-data/src/Corba/Codegen/: Data.hs
corba-codegen-wai/: corba-codegen-wai.cabal
corba-codegen-wai/src/Corba/Codegen/: Wai.hs
corba-codegen-wai/src/Corba/Codegen/Wai/: Json.hs
corba-core/: corba-core.cabal  corba-core.lock-7.10.2  corba-core.lock-8.0.1  corba-core.lock-8.2.1
corba-core/src/: Corba.hs
corba-core/src/Corba/: Core.hs
corba-core/src/Corba/Core/: TH.hs
corba-core/src/Corba/Core/Data/: Service.hs  Transport.hs
corba-core/src/Corba/Core/Syntax/: Service.hs
corba-core/src/Corba/Data/: Service.hs  Transport.hs
corba-core/src/Corba/Syntax/: Service.hs
corba-example/: corba-example.cabal  corba-example.lock-7.10.2  corba-example.lock-8.0.1  master.toml
corba-example/main/: corba-example-client.hs  corba-example-service.hs
corba-example/service/: example.corba  example.mcn
corba-example/src/Corba/Example/: Client.hs  Data.hs  Json.hs  Service.hs
corba-example/test/: test-cli.hs
corba-example/test/cli/ping/: run
corba-runtime-client/: corba-runtime-client.cabal  corba-runtime-client.lock-7.10.2  corba-runtime-client.lock-8.0.1
corba-runtime-client/src/Corba/Runtime/: Client.hs
corba-runtime-client/src/Corba/Runtime/Client/: Data.hs  Json.hs
corba-runtime-core/: corba-runtime-core.cabal  corba-runtime-core.lock-7.10.2  corba-runtime-core.lock-8.0.1
corba-runtime-core/src/Corba/Runtime/: Core.hs
corba-runtime-core/src/Corba/Runtime/Core/: Data.hs  Json.hs
corba-runtime-core/test/: test.hs
corba-runtime-core/test/Test/Corba/Runtime/Core/: Gen.hs  Json.hs
corba-runtime-wai/: corba-runtime-wai.cabal  corba-runtime-wai.lock-7.10.2  corba-runtime-wai.lock-8.0.1
corba-runtime-wai/src/Corba/Runtime/: Wai.hs
corba-runtime-wai/src/Corba/Runtime/Wai/: Data.hs  Json.hs
doc/: motivation.md  versioning.md
script/: corba
