name:                  corba-codegen-wai
version:               1.0.0
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2017 Ambiata.
synopsis:              corba-core
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           corba-codegen-wai

library
  build-depends:
                       base                            >= 3          && < 5
                     , aeson                           >= 0.8        && < 1.3
                     , ambiata-machinator-core
                     , ambiata-p
                     , ambiata-x-templatehaskell
                     , containers                      == 0.5.*
                     , corba-core
                     , corba-codegen-aeson
                     , corba-codegen-data
                     , template-haskell
                     , text                            == 1.2.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Corba.Codegen.Wai.Json

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , corba-core
                     , corba-codegen-aeson
                     , hedgehog
