name:                  corba-core
version:               1.0.0
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2017 Ambiata.
synopsis:              corba-core
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           corba-core

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-machinator-core
                     , ambiata-p
                     , ambiata-x-eithert
                     , bytestring                      >= 0.10.4     && < 0.11
                     , containers                      == 0.5.*
                     , pretty-show                     == 1.6.*
                     , semigroups                      == 0.18.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.6

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Corba
                       Corba.Data.Service
                       Corba.Data.Transport
                       Corba.Syntax.Service

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-p
