name:                  corba-runtime-client
version:               1.0.0
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2017 Ambiata.
synopsis:              corba-runtime-client
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           corba-runtime-client

library
  build-depends:
                       base                            >= 3          && < 5
                     , aeson                           >= 0.8        && < 1.3
                     , bytestring                      == 0.10.*
                     , corba-runtime-core
                     , http-client                     == 0.4.*
                     , http-types                      >= 0.8        && < 0.10
                     , text                            >= 1.1        && < 1.3
                     , transformers                    >= 0.4        && < 0.7


  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Corba.Runtime.Client
                       Corba.Runtime.Client.Data
                       Corba.Runtime.Client.Json

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , corba-runtime-client
                     , hedgehog                        >= 0.5        && < 1.0
