name:                  corba-runtime-core
version:               1.0.0
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2017 Ambiata.
synopsis:              corba-runtime-core
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           corba-runtime-core

library
  build-depends:
                       base                            >= 3          && < 5
                     , aeson                           >= 0.8        && < 1.3
                     , bytestring                      >= 0.10.4     && < 0.11
                     , text                            == 1.2.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Corba.Runtime.Core
                       Corba.Runtime.Core.Data
                       Corba.Runtime.Core.Json

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , corba-runtime-core
                     , containers                      >= 0.5.6      && < 0.6
                     , aeson
                     , hedgehog                        >= 0.5        && < 1.0
                     , text                            == 1.2.*
                     , unordered-containers            >= 0.2        && < 0.3
                     , vector
