name:                  corba-runtime-wai
version:               1.0.0
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2017 Ambiata.
synopsis:              corba-runtime-core
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           corba-runtime-core

library
  build-depends:
                       base                            >= 3          && < 5
                     , aeson                           >= 0.8        && < 1.3
                     , bytestring                      >= 0.10.4     && < 0.11
                     , containers                      >= 0.5.6      && < 0.6
                     , corba-runtime-core
                     , http-types                      >= 0.8        && < 0.10
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.7
                     , wai                             >= 3.0        && < 3.3

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Corba.Runtime.Wai
                       Corba.Runtime.Wai.Data
                       Corba.Runtime.Wai.Json

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , corba-runtime-wai
                     , hedgehog
